[package]
name = "intentional"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Doing things with intent"
repository = "https://github.com/khonsulabs/intentional"
keywords = ["clippy", "warnings", "cast", "assert"]
categories = ["no-std", "development-tools"]
readme = "./README.md"

[dependencies]
